# Zero-Knowledge

./: Cargo.toml  README.md
src/: lib.rs
src/frontend/: parser.rs
src/frontend/src/ir/: graph.rs - Intermediate Representation
